add facing to run on mobile

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-900 text-white">
 
-<div class="w-full flex justify-center">
+<div class="w-full flex justify-center" onclick="init()">
     <div class="w-20 h-20 rounded-full overflow-hidden">
         <img class="object-cover w-20 h-20" src="logo.jpg">
     </div>
-
 </div>
 <h1 class="text-3xl font-bold text-pink-500 uppercase">SMART WASTE CLASSIFIER</h1>
 <p class="text-pink-500 uppercase">AI-Powered Waste Sorting System</p>
@@ -80,7 +79,7 @@
 
     }
 
-    window.onload = init;
+    //window.onload = init;
 </script>
 
 </body>
