--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
     <title>SMART WASTE CLASSIFIER</title>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen bg-gray-900 text-white">
-
-<div class="w-full flex justify-center" onclick="init()">
+<body class="flex flex-col items-center justify-center min-h-screen bg-gray-900 text-white cursor-pointer"
+      onclick="init()">
+<div class="w-full flex justify-center cursor-pointer">
     <div class="w-20 h-20 rounded-full overflow-hidden">
         <img class="object-cover w-20 h-20" src="logo.jpg">
     </div>
@@ -79,7 +79,9 @@
 
     }
 
-    //window.onload = init;
+    setTimeout(() => {
+        init();
+    }, 1000);
 </script>
 
 </body>
