--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-900 text-white cursor-pointer"
       onclick="startScan()">
 <div class="w-full flex justify-center cursor-pointer">
-    <div class="w-20 h-20 rounded-full overflow-hidden">
-        <img class="object-cover w-20 h-20" src="logo.jpg">
+    <div class="w-10 h-10 lg:w-20 lg:h-20 rounded-full overflow-hidden">
+        <img class="object-cover w-10 h-10 lg:w-20 lg:h-20" src="logo.jpg">
     </div>
 </div>
-<h1 class="text-3xl font-bold text-pink-500 uppercase">SMART WASTE CLASSIFIER</h1>
+<h1 class="text-2xl lg:text-3xl font-bold text-pink-500 uppercase">SMART WASTE CLASSIFIER</h1>
 <p class="text-pink-500 uppercase">AI-Powered Waste Sorting System</p>
 <div class="w-full flex flex-col items-center mb-8">
     <div class="rounded-lg overflow-hidden border-4 border-pink-500 shadow-lg" id="webcam-container"></div>
