add facing to run on mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </button>
 
 <script type="text/javascript">
-    const URL = "https://teachablemachine.withgoogle.com/models/IhV8k0q4Y/";
+    const URL = "https://teachablemachine.withgoogle.com/models/jy4nTDeQW/";
     let model, webcam, maxPredictions;
 
     async function init() {
