--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </button>
 
 <script type="text/javascript">
-    const URL = "https://teachablemachine.withgoogle.com/models/3-c8CXHjg/";
+    const URL = "https://teachablemachine.withgoogle.com/models/UdxmzUf10/";
     let model, webcam, maxPredictions;
 
     async function init() {
